# DN-LiDAR

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
data/: .gitattributes  GNSS_lat0=46.566641300900_lon0=6.512265144377_short.txt
data/trajectories/: .gitattributes  T0-R.out  T1-KS.out
include/: initial_guess_generator.hpp  stamped_csv.hpp
src/: initial_guess_generator.cpp  main.cpp  stamped_csv.cpp
tools/trajectory_comparison/: runTrajectoryComparison.m
tools/trajectory_comparison/functions/: R1.m  R2.m  R3.m  compareTrajectories.m  compareTrajectories_old.m  dcm2quat.m  findstrt.m  readPosprocFile.m
